Fix dark mode scheme for ImageCheckbox

--- a/src/js/Components/ImageCheckbox.module.css
+++ b/src/js/Components/ImageCheckbox.module.css
@@ -7,8 +7,8 @@
   object-fit: contain;
 }
 .container > input:checked ~ img {
-  background: var(--bg-color);
+  background: var(--bg-overlay-color);
 }
 .container:hover > img {
-  outline: 2px solid var(--bg-color);
+  outline: 2px solid var(--bg-overlay-color);
 }
